test/error/unknown-type.dsk
let f = (x: BadType) -> void
    return
end
